appId: route.planner
---
- launchApp
- tapOn: "Sign up"
- tapOn:
    below:
      text: "Email"
      index: 0
- inputText: "pass"
- tapOn:
    below:
      text: "password"
      index: 0
- inputText: "pass2"
- assertNotVisible: "pass"
- assertNotVisible: "pass2"
